2023-12-09T16:11:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7152220298 # 2152
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-09
* notice: last 14d: unq all: 105 153
* notice: prev accum: outdated-unq outdated-all / unq all: 2020 5846 / 2128 5991
* notice: next accum: outdated-unq outdated-all / unq all: 2020 5846 / 2136 6000
* notice: prev exec diff / last date diff / accum: unq all: +8 +9 -0 -1 / +8 +9 -0 -0 / 8 9
* notice: removed / changed dates: [] / [2023-11-25 2023-12-09]

2023-12-09T00:45:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7147850902 # 2150
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-09
* notice: last 14d: unq all: 99 145
* notice: prev accum: outdated-unq outdated-all / unq all: 2018 5842 / 2128 5991
* notice: next accum: outdated-unq outdated-all / unq all: 2020 5846 / 2128 5991
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-24] / []

2023-12-08T08:12:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7138952269 # 2148
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
* notice: last 14d: unq all: 99 146
* notice: prev accum: outdated-unq outdated-all / unq all: 2018 5842 / 2127 5990
* notice: next accum: outdated-unq outdated-all / unq all: 2018 5842 / 2128 5991
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -3 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-24 2023-12-08]

2023-12-08T00:47:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7135858980 # 2147