@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-12-09T16:11:23Z",
-  "count" : 9,
-  "count_minmax" : [ 9, 9 ],
-  "count_decinc" : [ -0, +9 ],
-  "uniques" : 8,
-  "uniques_minmax" : [ 8, 8 ],
-  "uniques_decinc" : [ -0, +8 ]
+  "timestamp" : "2023-12-10T00:50:51Z",
+  "count" : 10,
+  "count_minmax" : [ 9, 10 ],
+  "count_decinc" : [ -0, +10 ],
+  "uniques" : 9,
+  "uniques_minmax" : [ 8, 9 ],
+  "uniques_decinc" : [ -0, +9 ]
 }
