@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-09T16:11:23Z",
-  "count_outdated" : 5846,
-  "uniques_outdated" : 2020,
-  "count" : 6000,
-  "uniques" : 2136,
+  "timestamp" : "2023-12-10T00:50:51Z",
+  "count_outdated" : 5848,
+  "uniques_outdated" : 2021,
+  "count" : 6001,
+  "uniques" : 2137,
   "clones" : [
-    {
-      "timestamp": "2023-11-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-26T00:00:00Z",
       "count": 2,
@@ -124,12 +115,12 @@
     },
     {
       "timestamp": "2023-12-09T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "count_decinc": [ 0, 9 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ],
-      "uniques_decinc": [ 0, 8 ]
+      "count": 10,
+      "count_minmax": [ 9, 10 ],
+      "count_decinc": [ 0, 10 ],
+      "uniques": 9,
+      "uniques_minmax": [ 8, 9 ],
+      "uniques_decinc": [ 0, 9 ]
     }
   ]
 }
