@@ -1,12 +1,7 @@
 {
   "count": 153,
-  "uniques": 105,
+  "uniques": 106,
   "clones": [
-    {
-      "timestamp": "2023-11-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-26T00:00:00Z",
       "count": 2,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2023-12-09T00:00:00Z",
-      "count": 9,
-      "uniques": 8
+      "count": 10,
+      "uniques": 9
     }
   ]
 }
